--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-router": "^4.2.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "styled-components": "^2.2.3"
   }
 }
