--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
+    "react-font-face": "^0.2.1",
     "react-router": "^4.2.0",
     "react-scripts": "1.0.17"
   },
