--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/src/index.js",
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "react-scripts build",
+    "build": "cd client && npm run build",
     "server": "nodemon server/src/index.js --variables --exec babel-node",
     "client": "cd client && npm start",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha client/test --timeout 20000  --compilers js:babel-core/register"
