--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.1.0",
     "react-font-face": "^0.2.1",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.0.17",
     "react-transition-group": "^2.2.1"
   },
