--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "chai": "^4.1.2",
     "concurrently": "^3.5.0",
     "mocha": "^4.0.1",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.18.4"
   },
   "dependencies": {
     "axios": "^0.17.1",
@@ -36,7 +36,7 @@
     "react-dom": "^16.1.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
+    "react-scripts": "^1.1.5",
     "styled-components": "^2.2.3"
   }
 }
