--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "nodemon": "^1.18.4"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/react-fontawesome": "^0.1.2",
     "axios": "^0.17.1",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
@@ -35,13 +38,15 @@
     "express": "^4.16.2",
     "google-auth-library": "^0.12.0",
     "googleapis": "^23.0.0",
+    "i": "^0.3.6",
     "morgan": "^1.9.0",
+    "npm": "^6.4.1",
     "path": "^0.12.7",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.0.17",
+    "react-scripts": "^1.1.5",
     "request": "^2.87.0",
     "styled-components": "^2.2.3"
   }
