--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "npm": "^6.4.1",
     "prop-types": "^15.6.0",
     "react": "^16.1.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.1.0",
     "react-font-face": "^0.2.1",
     "react-router": "^4.2.0",
