--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     "react"
   ],
   "rules"   : {
+    "max-len": "off",
     "no-console": "off",
     "no-await-in-loop": "off",
     "no-restricted-syntax": "off",
