Replace everything with new implementation

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,25 @@
-# general
-node_modules
-.vscode
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# client
-client/node_modules
-client/src/config.js
-client/build
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# server
-server/build
+# testing
+/coverage
 
-# OS
-*.DS_STORE
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+/src/config.json
