--- a/package.json
+++ b/package.json
@@ -1,54 +1,35 @@
 {
-  "name": "nts-app",
-  "version": "1.0.0",
-  "description": "A web application for compiling playlists for NTS radio shows",
-  "main": "server/src/index.js",
-  "scripts": {
-    "setup": "npm install && cd client && npm install && cd ../server && npm install",
-    "start": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "cd client && npm run build",
-    "server": "nodemon server/src/index.js --variables --exec babel-node",
-    "client": "cd client && npm start",
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha client/test --timeout 20000  --compilers js:babel-core/register"
-  },
-  "author": "tedigc",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-eslint": "^8.2.3",
-    "chai": "^4.1.2",
-    "concurrently": "^3.5.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-react": "^7.9.1",
-    "mocha": "^4.0.1",
-    "nodemon": "^1.18.4"
-  },
+  "name": "nts-mix",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.4",
-    "@fortawesome/free-solid-svg-icons": "^5.3.1",
-    "@fortawesome/react-fontawesome": "^0.1.2",
-    "axios": "^0.17.1",
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "body-parser": "^1.18.2",
-    "cheerio": "^1.0.0-rc.2",
-    "create-react-app": "^1.4.3",
-    "express": "^4.16.2",
-    "google-auth-library": "^0.12.0",
-    "googleapis": "^23.0.0",
-    "i": "^0.3.6",
-    "morgan": "^1.9.0",
-    "npm": "^6.4.1",
-    "path": "^0.12.7",
-    "react": "^16.1.0",
-    "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.1.0",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^1.1.5",
-    "request": "^2.87.0",
-    "styled-components": "^2.2.3"
+    "axios": "^0.19.0",
+    "classnames": "^2.2.6",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-scripts": "3.1.0",
+    "react-transition-group": "^4.2.2",
+    "styled-components": "^4.3.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
