--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rebass/grid": "^6.1.0",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "react": "^16.9.0",
